tests/runnable/test_03_vardecl.ul
// test 3 : Has a variable declaration
// Parser / Lexer Valid: Yes

void main ()
{
    int a;
}